<resources>
    <string name="app_name">app04</string>
    <string name="back_door">
\nStray Kids - Back Door \n
\nHey, you wanna come in?
\n
\nMove over, and here I come
\nLast time was just a warm-up umm
\nThis time, it’s for real party
\nStay out of this if you can’t handle it yeah
\nGosh, you must feel tight
\nLet it all go and enjoy yourself to the full, everyone
\nTurn off the light and light up your eyes all night
\nStop hiding your excitement and let it all out
\n(Hey, come inside now, hey)
\n
\nI’ll walk out that door to see everything I wanted
\nI can hear the music playing on the other side of the door
\nI shout my lungs out, I don’t
\nHave time to hesitate
\n(Hey)
\n(Come inside now)
\n(Hey)
\n
\nAuthorized personnel only here back door
\nAuthorized personnel only here back door
\nAuthorized personnel only here back door
\nIf you want to be authorized
\n
\nEy I guess this is it
\nIt’s time to think ready to go
\nThis body suffered enough from having a bad owner
\nI’ll make it up to you, so follow follow me back door
\nIt’s okay since it’s not SECOM
\nThe sound that I’m hearing is a fanfare
\nLet’s play all night long, what I need is more caffeine
\nCome if you want, the passcode is Open Sesame
\n
\nEverything looks different, and at this moment
\nEverything turns out to be perfect
\nI’m watching my fantasy unfold before my eyes
\nI shout my lungs out, I don’t
\nHave time to hesitate
\n(Hey, come inside now, hey)
\n
\nAuthorized personnel only here back door
\nAuthorized personnel only here back door
\nAuthorized personnel only here back door
\nIf you want to be authorized
\nKnock knock
\n
\nLights out
\nYeah it is getting more glamorous as time passes
\nYeah we gon’ do it right now, do it right now baby
\nCome to your senses from now on
\nLook at this world and keep it in your eyes
\nYour heart pounds rum pum pum pum
\nMake ‘em say wow, wow, wow, yeah
\nBring ‘em all, all, all, ey
\nSing along, along, along, hey
\n3 2 1
\n
\nAuthorized personnel only here back door
\nAuthorized personnel only here back door
\nAuthorized personnel only here back door
\nIf you want to be authorized
\nKnock knock
\n
\nThe bell rings and we go crazy
\nToday, we do our thang again
\nThe bell rings and we go crazy
\nTonight, I bark again ey
\nThe bell rings and we go crazy
\nToday, we do our thang again
\nThe bell rings and we go crazy
\nHey, you wanna come in?
    \n\n\n\n\n\n\n\n</string>
    <string name="i_am_button">i am button</string>
    <string name="i_am_text">i am text</string>
    <string name="stream_back_door">stream back door</string>
    <string name="stream_the_tortoise_and_the_hare">stream the tortoise and the hare</string>
    <string name="stream_b_me">stream b me</string>
    <string name="stream_any">stream any</string>
    <string name="stream_ex">stream ex</string>
    <string name="stream_we_go">stream we go</string>
    <string name="stream_wow">stream wow</string>
    <string name="stream_my_universe">stream my universe</string>
    <string name="stream_go_live">stream go live</string>
    <string name="stream_gods_menu">stream gods menu</string>
    <string name="stream_easy">stream easy</string>
    <string name="stream_pacemaker">stream pacemaker</string>
    <string name="stream_airplane">stream airplane</string>
    <string name="stream_another_day">stream another day</string>
    <string name="stream_phobia">stream phobia</string>
    <string name="stream_blueprint">stream blueprint</string>
    <string name="stream_ta">stream ta</string>
    <string name="stream_haven">stream haven</string>
    <string name="stream_top">stream top</string>
    <string name="stream_slump">stream slump</string>
    <string name="stream_gone_days">stream gone days</string>
    <string name="stream_on_track">stream on track</string>
    <string name="stan_stray_kids">stan stray kids</string>
    <string name="stream_stray_kids">stream stray kids</string>
    <string name="new_line">\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
</resources>